# raytracer-weekend-rs

./: .gitignore  Cargo.toml
examples/: balls.rs  basic.rs  cornell.rs  earth.rs  final.rs  marble.rs  perlin.rs
src/: aabb.rs  bvh.rs  camera.rs  hit.rs  lib.rs  main.rs  rays.rs  utils.rs  vectors.rs  volumes.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: box_box.rs  mod.rs  moving_sphere.rs  plane.rs  sphere.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/textures/: checker.rs  image_texture.rs  mod.rs  noise.rs  perlin.rs  solid_color.rs
src/vectors/: mod.rs  utils.rs
