[package]
authors = ["nzaharov"]
edition = "2018"
name = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
image = "0.23.14"
indicatif = "0.16.2"
num_cpus = "1.13.0"
rand = "0.8.4"
