[package]
authors = ["nzaharov"]
edition = "2021"
name = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
image = "0.24.2"
num_cpus = "1.13.1"
rand = "0.8.5"
jemallocator = "0.5.0"
enum_dispatch = "0.3.8"
rayon = "1.5.3"
indicatif = { version = "0.17.1", features = ["rayon"] }
